Multi-Thread rework